find_undefined_symbol_add_on(): Resolve non-weak symbols defined in the add-on to themselves. This works around the problem that those symbols could be resolved to symbols in the application, which is usually undesired. Weak symbols have the same problem, but the the runtime loader cannot decide which should be resolved locally and which mustn't.

The root issue is that BeOS style add-ons simply cannot be supported by a
standard-complying ELF loader.

Affects gcc 4 only, since with gcc 2 we link everything symbolically. The best
solution for the time being would be to build gcc 4 add-ons with default
hidden visibility, exporting only the symbols that should be visible.

Related ticket: #7114


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40248 a95241bf-73f2-0310-859d-f6bbb57e9c96